# backend

./: .gitignore  Cargo.toml  README.md  diesel.toml  docker-compose.yml
.github/workflows/: ci.yml
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
migrations/2023-10-14-204815_create_skills/: down.sql  up.sql
migrations/2023-10-15-110306_create_centers/: down.sql  up.sql
migrations/2023-10-16-114450_create_zones/: down.sql  up.sql
migrations/2023-10-17-101440_create_addresses/: up.sql
migrations/2023-10-18-110306_create_centers/: up.sql
migrations/2023-10-19-162723_create_users/: up.sql
migrations/2023-10-19-192601_create_mission_types/: down.sql  up.sql
migrations/2023-10-20-082858_create_nurses/: down.sql  up.sql
migrations/2023-10-21-070047_create_patients/: down.sql  up.sql
migrations/2023-10-21-155911_create_missions/: down.sql  up.sql
migrations/2023-10-22-071013_create_visits/: down.sql  up.sql
migrations/2023-10-22-072021_create_l_visits_nurses/: down.sql  up.sql
migrations/2023-10-23-105949_create_l_nurses_skills/: up.sql
migrations/2023-10-23-105949_l_nurses_skills/: down.sql  up.sql
migrations/2023-10-24-155353_create_managers/: up.sql
migrations/2023-10-29-113625_create_availabilities/: down.sql  up.sql
migrations/2023-11-02-163342_create_l_missions_skills/: down.sql  up.sql
src/: auth.rs  database.rs  documentation.rs  error.rs  lib.rs  main.rs  models.rs  pagination.rs  params.rs  routes.rs  schema.rs
src/models/: addresses.rs  availabilities.rs  centers.rs  has_column.rs  l_missions_skills.rs  l_nurses_skills.rs  l_visits_nurses.rs  managers.rs  mission_types.rs  missions.rs  nurses.rs  patients.rs  skills.rs  users.rs  visits.rs  zones.rs
src/params/: search.rs  sort.rs
src/routes/: auth.rs  centers.rs  managers.rs  mission_types.rs  missions.rs  nurses.rs  patients.rs  skills.rs  version.rs  visits.rs  zones.rs
tests/: has_column.rs
workspace/backend-derive/: Cargo.toml
workspace/backend-derive/src/: has_column.rs  lib.rs
workspace/macros/src/: delete.rs  get.rs  lib.rs  list.rs  total.rs
