[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
diesel = { version = "2.1.3", default-features = false, features = ["postgres", "r2d2"] }
diesel_migrations = { version = "2.1.0", features = ["postgres"] }
env_logger = "0.10.0"
r2d2 = "0.8.10"
serde = "1.0.189"
utoipa = { version = "4.0.0", features = ["actix_extras"] }
utoipa-redoc = { version = "1.0.0", features = ["actix-web"] }


[profile.release]
strip = true
opt-level = 3
lto = true
