[package]
name = "backend"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/TA72-project/backend"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "workspace/macros",
]

[dependencies]
# Web framework
actix-web = "4.4.0"
# Date and time handling
chrono = { version = "0.4.31", default-features = false, features = ["serde"] }
# ORM, database interaction
diesel = { version = "2.1.3", default-features = false, features = ["postgres", "r2d2", "chrono"] }
# Embed migrations in binary, run them on start
diesel_migrations = { version = "2.1.0", features = ["postgres"] }
# Logging facility
env_logger = "0.10.0"
icalendar = { version = "0.15.7", default-features = false }
# Macros definition for easier common manipulations
macros = { version = "0.1.0", path = "workspace/macros" }
# Database pool
r2d2 = "0.8.10"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
# OpenApi metadata
utoipa = { version = "4.0.0", features = ["actix_extras", "chrono", "preserve_order"] }
# OpenApi render
utoipa-redoc = { version = "1.0.0", features = ["actix-web"] }


[profile.release]
strip = true
opt-level = 3
lto = true
